# android-rust

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rustnativecpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/rusty-android/: Cargo.toml
app/src/main/cpp/rusty-android/src/: lib.rs
app/src/main/java/com/example/rustnativecpp/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rustnativecpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
